--- a/.github/workflows/docker-image-build-push-latest.yml
+++ b/.github/workflows/docker-image-build-push-latest.yml
@@ -6,18 +6,17 @@ on:
       - main
 
 jobs:
-
-  build:
-
+  push_to_registry:
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag shesselink81/wordpress-apache:latest
-    - uses: actions/checkout@v2
-      with:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v1
+        with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: Push Docker image
-      run: docker push shesselink81/wordpress-apache:latest
+          repository: shesselink81/wordpress-apache
+          # List of tags
+          tags: latest
