--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - MARIADB_DATABASE=bitnami_wordpress
       - ALLOW_EMPTY_PASSWORD=yes
   wordpress:
-    image: 'shesselink81/wordpress-apache:v5.6.0.5'
+    image: 'quay.io/shesselink81/wordpress-apache:v5.6.0.7'
     ports:
       - '80:8080'
       - '443:8443'
