--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   mariadb:
-    image: 'bitnami/mariadb:10.3'
+    image: 'bitnami/mariadb'
     volumes:
       - 'mariadb_data:/bitnami/mariadb'
     environment:
@@ -9,7 +9,7 @@ services:
       - MARIADB_DATABASE=bitnami_wordpress
       - ALLOW_EMPTY_PASSWORD=yes
   wordpress:
-    image: 'quay.io/shesselink81/wordpress-apache:v5.7.1.0'
+    image: 'quay.io/shesselink81/wordpress-apache:v5.7.2.0'
     ports:
       - '8080:8080'
       - '8443:8443'
@@ -25,6 +25,7 @@ services:
       - ALLOW_EMPTY_PASSWORD=yes
       - WORDPRESS_HTACCESS_OVERRIDE_NONE=no
       - WORDPRESS_HTACCESS_PERSISTENCE_ENABLED=yes
+      - WORDPRESS_SCHEME=https
 volumes:
   mariadb_data:
     driver: local
