--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,26 +18,13 @@ jobs:
         name: Checkout
         uses: actions/checkout@v3
       -
-        name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          # list of Docker images to use as base name for tags
-          images: |
-            quay.io/shesselink81/wordpress-nginx
-          # generate Docker tags based on the following events/attributes
-          tags: |
-            type=schedule
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=sha
-      -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          install: true
       -
         name: Login to QUAY
         if: github.event_name != 'pull_request'
@@ -47,11 +34,6 @@ jobs:
           username: shesselink81
           password: 5EsNhfcviK3kficPNsE3JdVRdZ9MlesuZwqYdmEaxfsIuKFkGDrXFFtBG6LpIZgolntVxsSLuS/IrNDOYBm44Q==
       -
-        name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+        name: Build
+        run: |
+          docker build --platform linux/amd64,linux/arm64 -t quay.io/shesselink81/wordpress-nginx:v6.1.1-6 --push .
