--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,8 +10,6 @@ on:
     - cron: '27 2 * * *'
 
   push:
-    branches:
-      - "main"
     tags: [ 'v*.*.*' ]
   pull_request:
     branches: [ "main" ]
@@ -21,7 +19,6 @@ env:
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
-  LATEST_TAG: ghcr.io/${{ github.repository }}:latest
 
 
 jobs:
@@ -78,8 +75,7 @@ jobs:
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
-          #tags: ${{ steps.meta.outputs.tags }}
-          tags: ${{ env.LATEST_TAG }}
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64
           cache-from: type=gha
