--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   memcached:
     image: docker.io/bitnami/memcached
   wordpress:
-    image: 'ghcr.io/shesselink81/wordpress-nginx:latest'
+    image: 'quay.io/shesselink81/wordpress-nginx:v6.1.1.17'
     ports:
       - '443:8443'
       - '80:8080'
