--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -71,6 +71,7 @@ jobs:
         name: Build
         uses: docker/bake-action@v2
         with:
+          push: true
           files: |
             ./docker-bake.hcl
             ${{ steps.meta.outputs.bake-file }}
