--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -40,7 +40,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            ${{ github.repository }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
       -
         # Add support for more platforms with QEMU (optional)
         # https://github.com/docker/setup-qemu-action
