--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -44,10 +44,11 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       -
-        name: Login to Docker Hub
+        name: Login to Quay io
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
+          registry: quay.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       -
