--- a/DockerfileAlpine
+++ b/DockerfileAlpine
@@ -1,12 +1,3 @@
-FROM yobasystems/alpine-php-wordpress:latest
-RUN mkdir -p /usr/html
-RUN mkdir -p /var/lib/nginx/logs
-RUN mkdir -p /usr/logs
-RUN chown -R nginx:nginx /usr/html
-RUN chown -R nginx:nginx /usr/logs
-RUN chown nginx /var/run
-RUN chown -R nginx:nginx /var/lib/nginx/logs
-RUN rm /sbin/php-fpm
-RUN ln -s /usr/sbin/php-fpm8 /sbin/php-fpm
-RUN ln -s /usr/sbin/php-fpm8 /sbin/php-fpm7
-RUN cd /usr/html && wp-cli core download --locale=en_GB
+FROM yobasystems/alpine-php-wordpress
+ADD run-pre.sh /
+RUN apk add php81-pecl-imagick libmemcached memcached php81-pecl-memcached
