--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,70 @@
 services:
-
-  wordpress:
-    image: wordpress
-    restart: always
+  db:
+    image: mariadb
     ports:
-      - 8090:80
+      - "3306:3306"
+    restart: always
+    environment:
+      MARIADB_USER: user
+      MARIADB_DATABASE: test
+      MARIADB_PASSWORD: x3RnucrxGSCRj0mU
+      MARIADB_ROOT_PASSWORD: x3RnucrxGSCRj0mU
+    volumes:
+      - db:/var/lib/mysql
+    healthcheck:
+      test: ["CMD-SHELL", "mariadb-admin ping -h localhost -u root -p$MARIADB_ROOT_PASSWORD"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  memcached:
+    image: memcached:1.6.39
+    restart: always
+
+  wordpress-init:
+    image: wordpress:cli-php8.4
     depends_on:
-     - db
-     - memcached
+      db:
+        condition: service_healthy
+    restart: "no"
+    user: root
+    command: ["/bin/bash", "/tmp/init.sh"]
     environment:
       WORDPRESS_DB_HOST: db
-      WORDPRESS_DB_USER: db
+      WORDPRESS_DB_USER: user
       WORDPRESS_DB_PASSWORD: x3RnucrxGSCRj0mU
       WORDPRESS_DB_NAME: test
       WP_ADMIN_USER: user
-      WP_ADMIN_PASSWORD: fW4URJ*rT9PrP!OA@U@M
-      WP_TITLE: New wordpress blog
+      WP_ADMIN_PASSWORD: admin
+      MEMCACHED_HOST: memcached
+      WP_TITLE: "New wordpress blog"
       WP_ADMIN_EMAIL: admin@example.com
-      WP_INIT: true
+      WP_LOCALE: nl_NL
+      WP_INIT: "true"
     volumes:
       - wordpress:/var/www/html
-  memcached:
-    image: docker.io/memcached:1.6.39
-  db:
-    image: mariadb
+      - ./init.sh:/tmp/init.sh:ro
+
+  wordpress:
+    image: ghcr.io/shesselink81/wordpress-apache:v6.8.3.4
     restart: always
+    user: www-data
+    depends_on:
+      db:
+        condition: service_healthy
+      wordpress-init:
+        condition: service_completed_successfully
+      memcached:
+        condition: service_started
+    ports:
+      - "8090:80"
     environment:
-      - MARIADB_USER=db
-      - MARIADB_DATABASE=test
-      - MARIADB_PASSWORD=x3RnucrxGSCRj0mU
-      #- ALLOW_EMPTY_PASSWORD=no
-      - MARIADB_ROOT_PASSWORD=x3RnucrxGSCRj0mU
+      WORDPRESS_DB_HOST: db
+      WORDPRESS_DB_USER: user
+      WORDPRESS_DB_PASSWORD: x3RnucrxGSCRj0mU
+      WORDPRESS_DB_NAME: test
     volumes:
-      - db:/var/lib/mysql
+      - wordpress:/var/www/html
 
 volumes:
   wordpress:
